QUAR-1046 fix: Adjust CTA container alignment for mobile responsiveness

--- a/packages/bpk-component-inset-banner/src/BpkInsetBannerV2/BpkInsetBannerSponsored.module.scss
+++ b/packages/bpk-component-inset-banner/src/BpkInsetBannerV2/BpkInsetBannerSponsored.module.scss
@@ -82,9 +82,13 @@
   &--cta-container {
     display: flex;
     height: tokens.bpk-spacing-xl();
+    height: 100%;
     grid-area: cta;
-    align-items: center;
     cursor: pointer;
+
+    @include breakpoints.bpk-breakpoint-mobile {
+      align-items: start;
+    }
   }
 
   &--cta-content {
